# automation-labs

./: README.md
001_create_jira_issue_cards/: README.md
001_create_jira_issue_cards/resolution/: README.md  config.py  constants.py  main.py  pyproject.toml  utils.py
001_create_jira_issue_cards/resolution/tests/: test_utils.py
