[tool.poetry]
name = "automation-lab-001"
version = "1.0.0"
description = "Create JIRA issue cards"
authors = ["Jairo JM Quispe <joelquispeunju@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
